Appoint model added , ui creation started for doctor listing page

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,3 @@
-port = 8000
+PORT = 8000
+MONGODB_URI = mongodb+srv://dentique:dentique@cluster0.rbik6g7.mongodb.net/dentique?retryWrites=true&w=majority
+
