--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,11 @@
-port = 8000
+PORT = 8998
+
+MONGODB_URI = mongodb+srv://mangalam:mangalam@cluster0.syoouy2.mongodb.net/data?retryWrites=true&w=majority
+
+SALT_ROUNDS = 8
+
+JWT_SECRET_KEY = jsonwebtokensecretKey
+
+GOOGLE_CLIENT_ID = 1044638390920-8trjts9bq84rds2l3gjlh4ap2ndb1a0q.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET = 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
