--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.6.2"
   }
 }
