--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://dentique:dentique@cluster0.rbik6g7.mongodb.net/dentique?retryWrites=true&w=majority
-
+SERVER = http://localhost:8000
