login/signup oauth

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,8 +1,14 @@
 
-PORT = 8000
-MONGODB_URI = mongodb+srv://dentique:dentique@cluster0.rbik6g7.mongodb.net/dentique?retryWrites=true&w=majority
-SERVER = http://localhost:8000
+PORT = 8998
+
+MONGODB_URI = mongodb+srv://mangalam:mangalam@cluster0.syoouy2.mongodb.net/data?retryWrites=true&w=majority
+
+SERVER = http://localhost:8998
 
 SALT_ROUNDS = 8
 
 JWT_SECRET_KEY = jsonwebtokensecretKey
+
+GOOGLE_CLIENT_ID = 1044638390920-p1bvahau09nm6ndohhh0f4moak7eb6ud.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET = 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
