--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.6.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3"
+    "swagger-ui-express": "^4.6.3",
+    "uuid": "^9.0.0"
   }
 }
